# simple-clock

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
docs/: pins.md
hw/: .gitignore  simple_clock.kicad_pcb  simple_clock.kicad_pro  simple_clock.kicad_sch
source/src/: brightness_manager.rs  button.rs  calendar.rs  clock_app.rs  clock_display.rs  clock_display_viewer.rs  clock_state.rs  count_down.rs  display_view.rs  lib.rs  linear_interpolation.rs  main.rs  number_digits.rs
src/: brightness_manager.rs  button.rs  clock_display.rs  clock_display_viewer.rs  count_down.rs  display.rs  lib.rs  main.rs  number_digits.rs  seven_segments.rs
src/display_view/: clock_display_view.rs  date_display_view.rs
tests/counter/: Cargo.toml  config.gdb
tests/counter/src/: main.rs
tests/full_checkup/: Cargo.toml
tests/full_checkup/.cargo/: config
tests/full_checkup/src/: main.rs
