[package]
name = "simple_clock"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.1"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
libm = "0.2.7"
nb = "1.1.0"
stm32f1xx-hal = { version = "0.10.0", git = "https://github.com/Rutherther/stm32f1xx-hal", features = ["rt", "stm32f103", "medium"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
